Add case sensitivity

--- a/index.css
+++ b/index.css
@@ -21,24 +21,57 @@ textarea{
     height: 25vh;
     resize: none;
 }
-fieldset *{
+fieldset{
+    user-select: none;
+}
+fieldset div *{
     cursor:pointer;
     user-select: none; /* Standard syntax */
 }
 container-label{
-    width: 40px;
+    align-self: center;
+    width: 5rem;
     text-align: end;
     padding-right: 15px;
+    flex-shrink: 0;
+    user-select: none;
 }
-.numLines {
+.num-lines {
     width:100px;
     margin-left: -100px;
     align-self:flex-end;
     text-align: end;
+    padding-bottom: 5px;
+    user-select: none;
 }
 body, textarea, button{
-    background:#1f1f1f;
+    background-color:#1f1f1f;
+}
+
+button{
+    border: 1px solid white;
+    padding: 3px 8px;
+    border-radius: 5px;
+    transition: 0.2s border-color ;
+    transition: 0.2s color ;
+    cursor: pointer;
+    user-select: none;
+}
+button:hover{
+    border-color: lightblue;
+    color: lightblue;
+}
+label{
+    transition: 0.2s color ;
+}
+fieldset>div:hover label{
+    color:lightblue
 }
 * {
+    font-size: 1rem;
+    font-family: roboto;
     color:white;
+}
+body{
+    padding:15px;
 }
